<resources>
    <string name="app_name">GraduateProject</string>
    <string name="class1">CSCI 240</string>
    <string name="class2">CSCI 241</string>
    <string name="page1heading">Enter the marks for Assignments</string>
    <string name="page2heading">Enter the marks for quiz</string>
    <string name="assign1">Assignment1</string>
    <string name="assign2">Assignment2</string>
    <string name="assign3">Assignment3</string>
    <string name="assign4">Assignment4</string>
    <string name="assign5">Assignment5</string>
    <string name="assign6">Assignment6</string>
    <string name="assign7">Assignment7</string>
    <string name="assign8">Assignment8</string>
    <string name="assign9">Assignment9</string>
    <string name="assign10">Assignment10</string>
    <string name="quiz1">Quiz1</string>
    <string name="quiz2">Quiz2</string>
    <string name="quiz3">Quiz3</string>
    <string name="quiz4">Quiz4</string>
    <string name="quiz5">Quiz5</string>
    <string name="quiz6">Quiz6</string>
    <string name="quiz7">Quiz7</string>
    <string name="quiz8">Quiz8</string>
    <string name="quiz9">Quiz9</string>
    <string name="quiz10">Quiz10</string>
    <string name="quiz11">Quiz11</string>
    <string name="quiz12">Quiz12</string>
    <string name="exam1">Exam1</string>
    <string name="exam2">Exam2</string>
    <string name="exam3">Exam3</string>
    <string name="marks1">Enter marks1</string>
    <string name="marks2">Enter marks2</string>
    <string name="marks3">Enter marks3</string>
    <string name="marks4">Enter marks4</string>
    <string name="marks5">Enter marks5</string>
    <string name="marks6">Enter marks6</string>
    <string name="marks7">Enter marks7</string>
    <string name="marks8">Enter marks8</string>
    <string name="marks9">Enter marks9</string>
    <string name="marks10">Enter marks10</string>
    <string name="marks11">Enter marks11</string>
    <string name="marks12">Enter marks12</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="heading">Please click on any one course below</string>

</resources>