<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/page1heading" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign1" />

                <EditText
                    android:id="@+id/edittext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks1"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign2" />

                <EditText
                    android:id="@+id/edittext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks2"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign3" />

                <EditText
                    android:id="@+id/edittext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks3"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign4" />

                <EditText
                    android:id="@+id/edittext4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks4"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign5" />

                <EditText
                    android:id="@+id/edittext5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks5"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign6" />

                <EditText
                    android:id="@+id/edittext6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks6"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textStyle="bold"
                    android:minHeight="48dp"
                    android:text="@string/assign7" />

                <EditText
                    android:id="@+id/edittext7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks7"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textStyle="bold"
                    android:minHeight="48dp"
                    android:text="@string/assign8" />

                <EditText
                    android:id="@+id/edittext8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks8"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/assignment9"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign9" />

                <EditText
                    android:id="@+id/edittext9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks9"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/assignment10"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:minHeight="48dp"
                    android:textStyle="bold"
                    android:text="@string/assign10" />

                <EditText
                    android:id="@+id/edittext10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:hint="@string/marks10"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="modifyData"
                    android:text="@string/next" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="goBack"
                    android:text="@string/back" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>